k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  labels:
    app: netflix-clone  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
        #habilitando leitura de metricas do prometheus
      # annotations:
      #   prometheus.io/scrap: "true"
      #   prometheus.io/port: "8000"
      #   prometheus.io/path: "/metrics"

    spec:
      containers:
      - name: netflix-clone
        image: gui3398/netflix-clone:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
            
       
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
